# pyicloud

./: .gitignore  .pre-commit-config.yaml  .yamllint  ASYNC_API.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  README.md  README.rst  TERMS_OF_USE.md  buf.yaml  example_reminders.py  example_reminders_delta.py  examples.py  examples_async.py  pylintrc  pyproject.toml  requirements.txt  requirements_all.txt  requirements_cli.txt  requirements_test.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  pyenv
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG.md  FEATURE_REQUEST.md  SUPPORT.md
.github/workflows/: autolabeler.yml  ci.yml  close_dependabot_pr_if_ha_older.yml  codeql.yml  linting.yml  publish.yml  release-drafter.yml  sonar.yml  sonarcube.yml  tests.yml
docs/research/: invites_service_design.md
examples/: notes_cli.py
pyicloud/: __init__.py  async_base.py  async_session.py  base.py  cmdline.py  const.py  cookie_jar.py  exceptions.py  hsa2_bridge.py  hsa2_bridge_prover.py  session.py  srp_password.py  ssl_context.py  sync_wrapper.py  utils.py
pyicloud/cli/: __init__.py  account_index.py  app.py  context.py  normalize.py  options.py  output.py
pyicloud/common/: __init__.py  models.py
pyicloud/services/: __init__.py  account.py  async_base.py  base.py  calendar.py  contacts.py  drive.py  findmyiphone.py  hidemyemail.py  photos.py  photos_legacy.py  reminders.py  ubiquity.py
scripts/: build.sh  pyenv.sh  setup.sh  startup.sh
tests/: __init__.py  conftest.py  const.py  const_account.py  const_drive.py  const_findmyiphone.py  const_login.py  test_account.py  test_async_base.py  test_base.py  test_calendar.py  test_cloudkit_client.py  test_cmdline.py  test_cmdline_entrypoint.py  test_contacts.py  test_cookie_jar.py  test_drive.py  test_example_reminders_delta.py  test_findmyiphone.py  test_hidemyemail.py  test_hsa2_bridge.py  test_invites.py  test_notes.py  test_notes_cli.py  test_notes_rendering.py  test_output.py  test_photos.py  test_reminders.py  test_srp_password.py  test_ssl_context.py  test_ubiquity.py  test_utils.py
tests/const/: __init__.py  const.py  const_account.py  const_drive.py  const_findmyiphone.py  const_login.py
tests/fixtures/: README.md  photos_album_create_response.json  photos_album_membership_query_core.json  photos_album_membership_response.json  photos_album_rename_response.json  photos_all_photos_query_core.json  photos_all_photos_response.json  photos_database_changes_response.json  photos_favorites_query_core.json  photos_favorites_response.json  photos_indexing_not_finished_response.json  photos_live_photo_response.json  photos_missing_counterparts_response.json  photos_recently_added_query_core.json  photos_recently_added_response.json  (+14 more)
(+126 files in other folders)
